language/move-lang/tests/move_check/borrows/assign_local_full_invalid.exp
error: 

    ┌── tests/move_check/borrows/assign_local_full_invalid.move:12:17 ───
    │
 12 │         let f = &x;
    │                 -- It is still being borrowed by this reference
 13 │         x = 0;
    │         ^ Invalid assignment of local 'x'
    │

error: 

    ┌── tests/move_check/borrows/assign_local_full_invalid.move:18:17 ───
    │
 18 │         let f = &mut x;
    │                 ------ It is still being mutably borrowed by this reference
 19 │         x = 0;
    │         ^ Invalid assignment of local 'x'
    │

error: 

    ┌── tests/move_check/borrows/assign_local_full_invalid.move:24:17 ───
    │
 24 │         let f = id(&x);
    │                 ------ It is still being borrowed by this reference
 25 │         x = 0;
    │         ^ Invalid assignment of local 'x'
    │

error: 

    ┌── tests/move_check/borrows/assign_local_full_invalid.move:30:17 ───
    │
 30 │         let f = id_mut(&mut x);
    │                 -------------- It is still being mutably borrowed by this reference
 31 │         x = 0;
    │         ^ Invalid assignment of local 'x'
    │

